@@ -18,16 +18,16 @@ import static no.unit.nva.search.ticket.TicketParameter.FROM;
 import static no.unit.nva.search.ticket.TicketParameter.OWNER;
 import static no.unit.nva.search.ticket.TicketParameter.SIZE;
 import static no.unit.nva.search.ticket.TicketParameter.SORT;
-import static no.unit.nva.search.ticket.TicketType.DOI_REQUEST;
-import static no.unit.nva.search.ticket.TicketType.GENERAL_SUPPORT_CASE;
-import static no.unit.nva.search.ticket.TicketType.PUBLISHING_REQUEST;
+import static no.unit.nva.search.ticket.TicketParameter.STATISTICS;
 import static no.unit.nva.testutils.RandomDataGenerator.randomString;
 
 import static nva.commons.apigateway.AccessRight.MANAGE_CUSTOMERS;
 import static nva.commons.apigateway.AccessRight.MANAGE_DOI;
 import static nva.commons.apigateway.AccessRight.MANAGE_PUBLISHING_REQUESTS;
+import static nva.commons.apigateway.AccessRight.SUPPORT;
 import static nva.commons.core.attempt.Try.attempt;
 import static nva.commons.core.ioutils.IoUtils.stringFromResources;
+import static nva.commons.core.paths.UriWrapper.fromUri;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
@@ -48,6 +48,7 @@ import com.fasterxml.jackson.core.type.TypeReference;
 
 import no.unit.nva.commons.json.JsonUtils;
 import no.unit.nva.constants.Words;
+import no.unit.nva.search.common.records.Facet;
 
 import nva.commons.apigateway.AccessRight;
 import nva.commons.apigateway.RequestInfo;
@@ -79,11 +80,17 @@ import java.util.stream.Stream;
 @Testcontainers
 class TicketClientTest {
 
-    public static final String REQUEST_BASE_URL = "https://x.org/?size=22&";
+    public static final String REQUEST_BASE_URL = "https://x.org/?size=22&aggregation=all&";
     public static final int EXPECTED_NUMBER_OF_AGGREGATIONS = 4;
-    public static final String CURRENT_USERNAME = "1412322@20754.0.0.0";
     public static final URI testOrganizationId =
             URI.create("https://api.dev.nva.aws.unit.no/cristin/organization/20754.0.0.0");
+    public static final String AnetteOlli = "1412322@20754.0.0.0";
+    public static final String Kir = "1492596@20754.0.0.0";
+    public static final String USER_03 = "1485369@5923.0.0.0";
+    public static final String TRUE = "true";
+    public static final String CURRENT_USERNAME = AnetteOlli;
+    public static final String USER_04 = "34322@20754.0.0.0";
+    public static final String USER_05 = "1485369@20754.0.0.0";
     private static final Logger logger = LoggerFactory.getLogger(TicketClientTest.class);
     private static final String TICKETS_VALID_TEST_URL_JSON = "ticket_datasource_urls.json";
     private static final RequestInfo mockedRequestInfo = mock(RequestInfo.class);
@@ -115,50 +122,64 @@ class TicketClientTest {
                 createArgument("offset=15&perPage=2", 2));
     }
 
-    static Stream<Arguments> uriAccessRights() {
-        return Stream.of(
-                createAccessRightArgument("owner=1412322@20754.0.0.0", 16, "1412322@20754.0.0.0"),
-                createAccessRightArgument("owner=1492596@20754.0.0.0", 2, "1492596@20754.0.0.0"),
-                createAccessRightArgument(
-                        "STATISTICS=true", 22, "1492596@20754.0.0.0", MANAGE_CUSTOMERS),
-                createAccessRightArgument("", 3, "1492596@20754.0.0.0", MANAGE_DOI),
-                createAccessRightArgument("", 7, "1492596@20754.0.0.0", AccessRight.SUPPORT),
-                createAccessRightArgument(
-                        "", 14, "1492596@20754.0.0.0", MANAGE_PUBLISHING_REQUESTS),
-                createAccessRightArgument("", 1, "1485369@5923.0.0.0", MANAGE_DOI),
-                createAccessRightArgument("", 6, "1485369@5923.0.0.0", AccessRight.SUPPORT),
-                createAccessRightArgument("", 13, "1485369@5923.0.0.0", MANAGE_PUBLISHING_REQUESTS),
-                createAccessRightArgument(
-                        "", 7, "1485369@5923.0.0.0", MANAGE_DOI, AccessRight.SUPPORT),
-                createAccessRightArgument(
-                        "",
-                        20,
-                        "1485369@5923.0.0.0",
-                        MANAGE_DOI,
-                        AccessRight.SUPPORT,
-                        MANAGE_PUBLISHING_REQUESTS),
-                createAccessRightArgument(
-                        "",
-                        20,
-                        "1412322@20754.0.0.0",
-                        MANAGE_DOI,
-                        AccessRight.SUPPORT,
-                        MANAGE_PUBLISHING_REQUESTS));
+    private static Arguments createArgument(String searchUri, int expectedCount) {
+        return Arguments.of(URI.create(REQUEST_BASE_URL + searchUri), expectedCount);
     }
 
-    static Stream<URI> uriSortingProvider() {
-
+    static Stream<Arguments> uriAccessRights() {
+        final AccessRight[] accessRights = {MANAGE_DOI, SUPPORT, MANAGE_PUBLISHING_REQUESTS};
+        final var statistics = STATISTICS.asCamelCase();
+        var uri = fromUri(REQUEST_BASE_URL).getUri();
         return Stream.of(
-                URI.create(
-                        REQUEST_BASE_URL
-                                + "sort=status&sortOrder=asc&sort=created_date&order=desc"),
-                URI.create(REQUEST_BASE_URL + "orderBy=status:asc,created_date:desc"),
-                URI.create(REQUEST_BASE_URL + "sort=status+asc&sort=created_date+desc"),
-                URI.create(
-                        REQUEST_BASE_URL
-                                + "sort=created_date&sortOrder=asc&sort=status&order=desc"),
-                URI.create(REQUEST_BASE_URL + "sort=modified_date+asc&sort=type+desc"),
-                URI.create(REQUEST_BASE_URL + "sort=relevance,modified_date+asc"));
+                accessRightArg(uriWithParam(uri, Words.OWNER, AnetteOlli), 0, 7, AnetteOlli),
+                accessRightArg(uriWithParam(uri, Words.OWNER, Kir), 0, 10, Kir),
+                accessRightArg(uriWithParam(uri, statistics, TRUE), 0, 22, Kir, MANAGE_CUSTOMERS),
+                accessRightArg(uri, 0, 11, Kir, MANAGE_DOI),
+                accessRightArg(uri, 0, 15, Kir, SUPPORT),
+                accessRightArg(uri, 0, 15, Kir, MANAGE_PUBLISHING_REQUESTS),
+                accessRightArg(uri, 0, 1, USER_03, MANAGE_DOI),
+                accessRightArg(uri, 0, 6, USER_03, SUPPORT),
+                accessRightArg(uri, 0, 13, USER_03, MANAGE_PUBLISHING_REQUESTS),
+                accessRightArg(uri, 0, 7, USER_03, MANAGE_DOI, SUPPORT),
+                accessRightArg(uri, 0, 20, AnetteOlli, accessRights),
+                accessRightArg(uri, 0, 20, USER_03, accessRights));
+    }
+
+    private static URI uriWithParam(URI uri, String key, String value) {
+        return fromUri(uri).addQueryParameter(key, value).getUri();
+    }
+
+    static Arguments accessRightArg(
+            URI searchUri,
+            int pending,
+            int expectedCount,
+            String userName,
+            AccessRight... accessRights) {
+        return Arguments.of(searchUri, pending, expectedCount, userName, accessRights);
+    }
+
+    static Stream<Arguments> uriProviderWithAggregationsAndAccessRights() {
+        final var url = URI.create("https://x.org/?size=0&aggregation=all");
+        final var url2 = URI.create("https://x.org/?size=0&aggregation=all&STATISTICS=true");
+        final var pending0 = 0;
+        final var pending1 = 1;
+        final AccessRight[] accessRights = {MANAGE_DOI, SUPPORT, MANAGE_PUBLISHING_REQUESTS};
+        return Stream.of(
+                accessRightArg(url, pending0, 7, AnetteOlli),
+                accessRightArg(url, pending0, 7, AnetteOlli, MANAGE_DOI),
+                accessRightArg(url, pending0, 8, AnetteOlli, SUPPORT),
+                accessRightArg(url, pending1, 19, AnetteOlli, MANAGE_PUBLISHING_REQUESTS),
+                accessRightArg(url, pending0, 10, Kir),
+                accessRightArg(url, pending1, 11, Kir, MANAGE_DOI),
+                accessRightArg(url, pending0, 15, Kir, SUPPORT),
+                accessRightArg(url, pending0, 15, Kir, MANAGE_PUBLISHING_REQUESTS),
+                accessRightArg(url2, pending0, 22, USER_03, MANAGE_CUSTOMERS),
+                accessRightArg(url, pending0, 0, USER_03),
+                accessRightArg(url, pending0, 20, USER_03, accessRights),
+                accessRightArg(url, pending0, 4, USER_04),
+                accessRightArg(url, pending0, 20, USER_04, accessRights),
+                accessRightArg(url, pending0, 0, USER_05),
+                accessRightArg(url, pending0, 20, USER_05, accessRights));
     }
 
     static Stream<URI> uriInvalidProvider() {
@@ -180,16 +201,6 @@ class TicketClientTest {
                 .map(entry -> createArgument(entry.getKey(), entry.getValue()));
     }
 
-    private static Arguments createAccessRightArgument(
-            String searchUri, int expectedCount, String userName, AccessRight... accessRights) {
-        return Arguments.of(
-                URI.create(REQUEST_BASE_URL + searchUri), expectedCount, userName, accessRights);
-    }
-
-    private static Arguments createArgument(String searchUri, int expectedCount) {
-        return Arguments.of(URI.create(REQUEST_BASE_URL + searchUri), expectedCount);
-    }
-
     private static Map<String, Integer> loadMapFromResource(String resource) {
         var mappingsJson = stringFromResources(Path.of(resource));
         var type = new TypeReference<Map<String, Integer>>() {};
@@ -201,12 +212,6 @@ class TicketClientTest {
 
         var mapping = indexingClient.getMapping(TICKETS);
         assertThat(mapping, is(notNullValue()));
-        //            var topLevelOrgType = mapping.path("properties")
-        //                .path(PUBLICATION)
-        //                .path(CONTRIBUTORS)
-        //                .path(AFFILIATIONS)
-        //                .;
-        //            assertThat(topLevelOrgType, is(equalTo("<MISSING>")));
         logger.info(mapping.toString());
     }
 
@@ -224,14 +229,11 @@ class TicketClientTest {
                                 .withRequiredParameters(SIZE, FROM)
                                 .fromTestQueryParameters(toMapEntries)
                                 .build()
-                                .withFilter()
-                                .organization(testOrganizationId)
-                                .apply()
                                 .doSearch(resourceClient2));
     }
 
     @Test
-    void shouldCheckFacets() throws BadRequestException {
+    void shouldCheckFacets() throws BadRequestException, UnauthorizedException {
         var hostAddress = URI.create(container.getHttpHostAddress());
         var uri1 = URI.create(REQUEST_BASE_URL + AGGREGATION.name() + EQUAL + ALL);
         var response1 =
@@ -241,11 +243,9 @@ class TicketClientTest {
                         .withRequiredParameters(FROM, SIZE)
                         .build()
                         .withFilter()
-                        .userAndTicketTypes(
-                                CURRENT_USERNAME,
-                                DOI_REQUEST,
-                                PUBLISHING_REQUEST,
-                                GENERAL_SUPPORT_CASE)
+                        .organization(testOrganizationId)
+                        .user(CURRENT_USERNAME)
+                        .accessRights(MANAGE_DOI, MANAGE_PUBLISHING_REQUESTS, SUPPORT)
                         .apply()
                         .doSearch(searchClient);
 
@@ -257,17 +257,17 @@ class TicketClientTest {
         assertThat(aggregations.size(), is(equalTo(EXPECTED_NUMBER_OF_AGGREGATIONS)));
 
         assertThat(aggregations.get(TYPE).size(), is(3));
-        assertThat(aggregations.get(STATUS).getFirst().count(), is(12));
-        assertThat(aggregations.get(BY_USER_PENDING.asCamelCase()).size(), is(2));
+        assertThat(aggregations.get(STATUS).getFirst().count(), is(11));
+        assertThat(aggregations.get(BY_USER_PENDING.asCamelCase()).size(), is(1));
         assertThat(aggregations.get(PUBLICATION_STATUS).size(), is(3));
 
         assertNotNull(FROM.asLowerCase());
-        assertEquals(TicketStatus.fromString("ewrdfg"), TicketStatus.NONE);
-        assertEquals(TicketType.fromString("wre"), TicketType.NONE);
+        assertEquals(TicketStatus.NONE, TicketStatus.fromString("ewrdfg"));
+        assertEquals(TicketType.NONE, TicketType.fromString("wre"));
     }
 
     @Test
-    void emptyResultShouldIncludeHits() throws BadRequestException {
+    void emptyResultShouldIncludeHits() throws BadRequestException, UnauthorizedException {
         var uri = URI.create("https://x.org/?id=018b857b77b7");
 
         var pagedResult =
@@ -277,11 +277,8 @@ class TicketClientTest {
                         .withRequiredParameters(FROM, SIZE, SORT)
                         .build()
                         .withFilter()
-                        .userAndTicketTypes(
-                                CURRENT_USERNAME,
-                                DOI_REQUEST,
-                                PUBLISHING_REQUEST,
-                                GENERAL_SUPPORT_CASE)
+                        .user(CURRENT_USERNAME)
+                        .accessRights(MANAGE_DOI, MANAGE_PUBLISHING_REQUESTS, SUPPORT)
                         .organization(testOrganizationId)
                         .apply()
                         .doSearch(searchClient);
@@ -290,7 +287,8 @@ class TicketClientTest {
     }
 
     @Test
-    void shouldReturnNewTicketsWhenSearchingForNewTicketsOnlyAndTypes() throws BadRequestException {
+    void shouldReturnNewTicketsWhenSearchingForNewTicketsOnlyAndTypes()
+            throws BadRequestException, UnauthorizedException {
         var uri =
                 URI.create(
                         "https://x.org/?status=New&size=500&type=doiRequest,generalSupportCase,publishingRequest&from=0");
@@ -301,11 +299,8 @@ class TicketClientTest {
                         .withDockerHostUri(URI.create(container.getHttpHostAddress()))
                         .build()
                         .withFilter()
-                        .userAndTicketTypes(
-                                CURRENT_USERNAME,
-                                DOI_REQUEST,
-                                PUBLISHING_REQUEST,
-                                GENERAL_SUPPORT_CASE)
+                        .user(CURRENT_USERNAME)
+                        .accessRights(MANAGE_DOI, MANAGE_PUBLISHING_REQUESTS, SUPPORT)
                         .organization(testOrganizationId)
                         .apply()
                         .doSearch(searchClient)
@@ -315,7 +310,8 @@ class TicketClientTest {
     }
 
     @Test
-    void shouldReturnNewTicketsWhenSearchingForNewTicketsOnly() throws BadRequestException {
+    void shouldReturnNewTicketsWhenSearchingForNewTicketsOnly()
+            throws BadRequestException, UnauthorizedException {
         var uri = URI.create("https://x.org/?status=New&size=500&from=0");
 
         var pagedResult =
@@ -324,11 +320,8 @@ class TicketClientTest {
                         .withDockerHostUri(URI.create(container.getHttpHostAddress()))
                         .build()
                         .withFilter()
-                        .userAndTicketTypes(
-                                CURRENT_USERNAME,
-                                DOI_REQUEST,
-                                PUBLISHING_REQUEST,
-                                GENERAL_SUPPORT_CASE)
+                        .user(CURRENT_USERNAME)
+                        .accessRights(MANAGE_DOI, MANAGE_PUBLISHING_REQUESTS, SUPPORT)
                         .organization(testOrganizationId)
                         .apply()
                         .doSearch(searchClient)
@@ -340,7 +333,7 @@ class TicketClientTest {
     @Test
     void
             shouldReturnNewAndPendingTicketsWithAssigneeWhenSearchingForTicketsWithStatusNewAndPendingAndAssignee()
-                    throws BadRequestException {
+                    throws BadRequestException, UnauthorizedException {
         var uri =
                 URI.create(
                         "https://x.org/?status=New,Pending&assignee=1412322@20754.0.0.0&size=10&from=0");
@@ -351,17 +344,14 @@ class TicketClientTest {
                         .withDockerHostUri(URI.create(container.getHttpHostAddress()))
                         .build()
                         .withFilter()
-                        .userAndTicketTypes(
-                                CURRENT_USERNAME,
-                                DOI_REQUEST,
-                                PUBLISHING_REQUEST,
-                                GENERAL_SUPPORT_CASE)
+                        .user(CURRENT_USERNAME)
+                        .accessRights(MANAGE_DOI, MANAGE_PUBLISHING_REQUESTS, SUPPORT)
                         .organization(testOrganizationId)
                         .apply()
                         .doSearch(searchClient)
                         .toPagedResponse();
 
-        assertEquals(9, pagedResult.hits().size());
+        assertEquals(3, pagedResult.hits().size());
     }
 
     @ParameterizedTest
@@ -376,11 +366,8 @@ class TicketClientTest {
                         .withDockerHostUri(URI.create(container.getHttpHostAddress()))
                         .build()
                         .withFilter()
-                        .userAndTicketTypes(
-                                CURRENT_USERNAME,
-                                DOI_REQUEST,
-                                PUBLISHING_REQUEST,
-                                GENERAL_SUPPORT_CASE)
+                        .user(CURRENT_USERNAME)
+                        .accessRights(MANAGE_DOI, MANAGE_PUBLISHING_REQUESTS, SUPPORT)
                         .organization(testOrganizationId)
                         .apply()
                         .doSearch(searchClient);
@@ -404,11 +391,9 @@ class TicketClientTest {
                         .withDockerHostUri(URI.create(container.getHttpHostAddress()))
                         .build()
                         .withFilter()
-                        .userAndTicketTypes(
-                                CURRENT_USERNAME,
-                                DOI_REQUEST,
-                                PUBLISHING_REQUEST,
-                                GENERAL_SUPPORT_CASE)
+                        .user(CURRENT_USERNAME)
+                        .accessRights(
+                                MANAGE_DOI, MANAGE_PUBLISHING_REQUESTS, SUPPORT, MANAGE_CUSTOMERS)
                         .organization(testOrganizationId)
                         .apply()
                         .doSearch(searchClient);
@@ -429,18 +414,21 @@ class TicketClientTest {
     @ParameterizedTest
     @MethodSource("uriAccessRights")
     void uriRequestReturnsSuccessfulResponseAsUser(
-            URI uri, Integer expectedCount, String userName, AccessRight... accessRights)
+            URI uri,
+            Integer ignoredValue,
+            Integer expectedCount,
+            String userName,
+            AccessRight... accessRights)
             throws ApiGatewayException {
 
-        final var accessRightList =
-                nonNull(accessRights) ? Arrays.asList(accessRights) : List.<AccessRight>of();
+        var accessRightList =
+                new java.util.ArrayList<>(
+                        nonNull(accessRights) ? Arrays.asList(accessRights) : List.of());
 
         var mockedRequestInfoLocal = mock(RequestInfo.class);
         when(mockedRequestInfoLocal.getUserName()).thenReturn(userName);
         when(mockedRequestInfoLocal.getTopLevelOrgCristinId())
                 .thenReturn(Optional.of(testOrganizationId));
-        when(mockedRequestInfoLocal.userIsAuthorized(MANAGE_CUSTOMERS)).thenReturn(true);
-
         when(mockedRequestInfoLocal.getAccessRights()).thenReturn(accessRightList);
 
         var response =
@@ -458,6 +446,38 @@ class TicketClientTest {
         assertNotNull(pagedSearchResourceDto);
         assertThat(pagedSearchResourceDto.hits().size(), is(equalTo(expectedCount)));
         assertThat(pagedSearchResourceDto.totalHits(), is(equalTo(expectedCount)));
+    }
+
+    @ParameterizedTest()
+    @MethodSource("uriProviderWithAggregationsAndAccessRights")
+    void uriRequestReturnsSuccessfulResponseWithAggregations(
+            URI uri,
+            Integer pending,
+            Integer expectedCount,
+            String userName,
+            AccessRight... accessRights)
+            throws ApiGatewayException {
+        var response =
+                TicketSearchQuery.builder()
+                        .fromTestQueryParameters(queryToMapEntries(uri))
+                        .withRequiredParameters(FROM, SIZE, AGGREGATION)
+                        .withDockerHostUri(URI.create(container.getHttpHostAddress()))
+                        .build()
+                        .withFilter()
+                        .organization(testOrganizationId)
+                        .user(userName)
+                        .accessRights(accessRights)
+                        .apply()
+                        .doSearch(searchClient);
+
+        var aggregations = response.toPagedResponse().aggregations();
+        assertNotNull(aggregations);
+
+        var actualPending =
+                aggregations.get(Constants.BY_USER_PENDING).stream().mapToInt(Facet::count).sum();
+        var actualCount = aggregations.get(TYPE).stream().mapToInt(Facet::count).sum();
+        assertThat(actualPending, is(equalTo(pending)));
+        assertThat(actualCount, is(equalTo(expectedCount)));
     }
 
     @Test
@@ -519,12 +539,9 @@ class TicketClientTest {
                         .withDockerHostUri(URI.create(container.getHttpHostAddress()))
                         .build()
                         .withFilter()
-                        .userAndTicketTypes(
-                                CURRENT_USERNAME,
-                                DOI_REQUEST,
-                                PUBLISHING_REQUEST,
-                                GENERAL_SUPPORT_CASE)
                         .organization(testOrganizationId)
+                        .user(CURRENT_USERNAME)
+                        .accessRights(MANAGE_DOI, MANAGE_PUBLISHING_REQUESTS, SUPPORT)
                         .apply()
                         .doSearch(searchClient);
 
@@ -549,6 +566,28 @@ class TicketClientTest {
     }
 
     @Test
+    void badUriRequestReturnsUnauthorized() throws UnauthorizedException {
+        var uri = URI.create(REQUEST_BASE_URL + "owner=Kir&assignee=Kir");
+
+        var mockedRequestInfoLocal = mock(RequestInfo.class);
+        when(mockedRequestInfoLocal.getUserName()).thenReturn(randomString());
+        when(mockedRequestInfoLocal.getTopLevelOrgCristinId())
+                .thenReturn(Optional.of(testOrganizationId));
+        when(mockedRequestInfoLocal.getAccessRights()).thenReturn(List.of(MANAGE_DOI));
+        assertThrows(
+                UnauthorizedException.class,
+                () ->
+                        TicketSearchQuery.builder()
+                                .fromTestQueryParameters(queryToMapEntries(uri))
+                                .withDockerHostUri(URI.create(container.getHttpHostAddress()))
+                                .withRequiredParameters(SIZE, FROM)
+                                .build()
+                                .withFilter()
+                                .fromRequestInfo(mockedRequestInfoLocal)
+                                .doSearch(searchClient));
+    }
+
+    @Test
     void uriRequestReturnsUnauthorized() throws UnauthorizedException {
         AtomicReference<URI> uri = new AtomicReference<>();
         uriSortingProvider().findFirst().ifPresent(uri::set);
@@ -565,5 +604,20 @@ class TicketClientTest {
                                 .withFilter()
                                 .fromRequestInfo(mockedRequestInfoLocal)
                                 .doSearch(searchClient));
+    }
+
+    static Stream<URI> uriSortingProvider() {
+
+        return Stream.of(
+                URI.create(
+                        REQUEST_BASE_URL
+                                + "sort=status&sortOrder=asc&sort=created_date&order=desc"),
+                URI.create(REQUEST_BASE_URL + "orderBy=status:asc,created_date:desc"),
+                URI.create(REQUEST_BASE_URL + "sort=status+asc&sort=created_date+desc"),
+                URI.create(
+                        REQUEST_BASE_URL
+                                + "sort=created_date&sortOrder=asc&sort=status&order=desc"),
+                URI.create(REQUEST_BASE_URL + "sort=modified_date+asc&sort=type+desc"),
+                URI.create(REQUEST_BASE_URL + "sort=relevance,modified_date+asc"));
     }
 }
